feat: Spring AI + Angular: Clone ChatGPT

--- a/angular-ai/src/styles.scss
+++ b/angular-ai/src/styles.scss
@@ -1,4 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
+@use '@angular/material' as mat;
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-toolbar {
+  background-color: #d7e3ff !important;
+  color: #005cbb !important;
+}
