--- a/angular-ai/src/app/chat/simple-chat/simple-chat.component.html
+++ b/angular-ai/src/app/chat/simple-chat/simple-chat.component.html
@@ -6,11 +6,16 @@
     </mat-toolbar>
   </div>
 
-  <div class="chat-history">
+  <div class="chat-history" #chatHistory>
     <div class="messages">
       <div *ngFor="let message of messages()" class="message">
         <div class="message-buble" [ngClass]="{'user': !message.isBot}">
           {{ message.text }}
+        </div>
+      </div>
+      <div class="message" *ngIf="isLoading">
+        <div class="message-buble">
+          <span class="typing">...</span>
         </div>
       </div>
     </div>
@@ -20,7 +25,7 @@
     <mat-form-field class="full-width">
       <mat-label>Ask anything</mat-label>
       <input matInput [(ngModel)]="userInput" (keyup.enter)="sendMessage()">
-      <button matIconButton matSuffix aria-label="Send" (click)="sendMessage()">
+      <button matIconButton matSuffix aria-label="Send" (click)="sendMessage()" [disabled]="isLoading">
         <mat-icon>send</mat-icon>
       </button>
     </mat-form-field>
